Tutorial 1: running the server (end)

--- a/Tutorial 1.ipynb
+++ b/Tutorial 1.ipynb
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'style': 'friendly', 'code': u'print \"hello, world\"\\n', 'language': 'python', 'title': u'', 'linenos': False, 'id': 5}\n"
+      "{'style': 'friendly', 'code': u'print \"hello, world\"\\n', 'language': 'python', 'title': u'', 'linenos': False, 'id': 14}\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"id\":5,\"title\":\"\",\"code\":\"print \\\"hello, world\\\"\\n\",\"linenos\":false,\"language\":\"python\",\"style\":\"friendly\"}\n"
+      "{\"id\":14,\"title\":\"\",\"code\":\"print \\\"hello, world\\\"\\n\",\"linenos\":false,\"language\":\"python\",\"style\":\"friendly\"}\n"
      ]
     }
    ],
@@ -220,6 +220,193 @@
     "print(Snippet.objects.count())\n",
     "serializer2.save()\n",
     "print(Snippet.objects.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SnippetSerializer(<Snippet: Snippet object>):\n",
+      "    id = IntegerField(label='ID', read_only=True)\n",
+      "    title = CharField(allow_blank=True, max_length=100, required=False)\n",
+      "    code = CharField(style={'base_template': 'textarea.html'})\n",
+      "    linenos = BooleanField(required=False)\n",
+      "    language = ChoiceField(choices=[('abap', 'ABAP'), ('abnf', 'ABNF'), ('ada', 'Ada'), ('adl', 'ADL...\n",
+      "    style = ChoiceField(choices=[('algol', 'algol'), ('algol_nu', 'algol_nu'), ('autumn', 'autumn'),...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n'.join(\n",
+    "    line[:100] + ('...' if len(line) > 100 else '') \n",
+    "    for line \n",
+    "    in repr(serializer).splitlines())\n",
+    ") # maybe reprs with lots of choices should be shortened..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running the Server\n",
+    "\n",
+    "We'll do it from the notebook because we're super cheeky."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import sys\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "DJPORT = 8805\n",
+    "dj = subprocess.Popen(\n",
+    "    [sys.executable, 'manage.py', 'runserver', str(DJPORT)], \n",
+    "    universal_newlines=True, \n",
+    "    stdout=subprocess.PIPE,\n",
+    "    stderr=subprocess.STDOUT,\n",
+    ")\n",
+    "time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://127.0.0.1:8805\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "server = 'http://127.0.0.1:{:d}'.format(DJPORT)\n",
+    "print(server)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{u'code': u'foo = \"bar\"\\n',\n",
+       "  u'id': 13,\n",
+       "  u'language': u'python',\n",
+       "  u'linenos': False,\n",
+       "  u'style': u'friendly',\n",
+       "  u'title': u''},\n",
+       " {u'code': u'print \"hello, world\"\\n',\n",
+       "  u'id': 14,\n",
+       "  u'language': u'python',\n",
+       "  u'linenos': False,\n",
+       "  u'style': u'friendly',\n",
+       "  u'title': u''},\n",
+       " {u'code': u'print \"hello, world\"',\n",
+       "  u'id': 15,\n",
+       "  u'language': u'python',\n",
+       "  u'linenos': False,\n",
+       "  u'style': u'friendly',\n",
+       "  u'title': u''}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.get(server + '/snippets')\n",
+    "print(response)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{u'code': u'print \"hello, world\"\\n',\n",
+       " u'id': 14,\n",
+       " u'language': u'python',\n",
+       " u'linenos': False,\n",
+       " u'style': u'friendly',\n",
+       " u'title': u''}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOME_ID = serializer.data['id']\n",
+    "\n",
+    "response = requests.get(server + '/snippets/{}'.format(SOME_ID))\n",
+    "print(response)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dj.terminate()"
    ]
   },
   {
